update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8,6 +8,9 @@ contributor:
     deathdate: 1997
     gutenberg_agent_id: '54003'
     url: http://www.gutenberg.org/2009/agents/54003
+covers:
+- cover_type: archival
+  image_path: 68393-h/images/cover.jpg
 creator:
   author:
     agent_name: Marlowe, Stephen
@@ -24,6 +27,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/32369
     wikipedia: https://en.wikipedia.org/wiki/Stephen_Marlowe
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68393#My-sweetheart-s-the-Man-in-the-Moon
 gutenberg_issued: '2022-06-24'
 identifiers:
   gutenberg: '68393'
